--- a/style.css
+++ b/style.css
@@ -164,3 +164,15 @@ ul li a:hover {
     border-radius: 9999px;
 
 }
+ #image {
+    position:absolute;
+    right: 0;
+    z-index: 1;
+ }
+
+ #aba {
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    max-width: 450px;
+    
+ }
