--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
 
     /*background: color image repeat position/size */
     background: var(--bg-url) no-repeat top center/cover;
+    height: 100vh;
 }
 
 html.light {
@@ -168,5 +169,13 @@ ul li a:hover {
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
     border-radius: 9999px;
+}
+@media ( min-width: 700px) {
+    :root {
+        --bg-url: url(./assets/assets/bg-desktop.jpg);
+    }
 
+    .light {
+        --bg-url: url(./assets/assets/bg-desktop-light.jpg);
+    }
 }
