--- a/style.css
+++ b/style.css
@@ -26,8 +26,7 @@ html.light {
     --sul-color:rgba(0, 0, 0, 0.5);
     --link-color:rgba(0, 0, 0, 0.1);
     --button-color: url(assets/assets/sun.svg);
-    --switch-left: none;
-    --switch-right: 0;
+    
 }
 
 
@@ -39,8 +38,8 @@ html.light {
     --sul-color:rgba(255, 255, 255, 0.5);
     --link-color:rgba(255, 255, 255, 0.1);
     --button-color: url(assets/assets/moon-stars.svg);
-    --switch-left: 0;
-    --switch-right: none;
+    
+    
 }
 
 
@@ -152,13 +151,24 @@ ul li a:hover {
 
     position: absolute;
     top: 50%;
-    left: var(--switch-left);
-    right: var(--switch-right);
+    left: 0;
     z-index: 1;
     transform: translateY(-50%);
+    animation: slide-out 0.4s;
     
-
 }
+
+.light #model button {
+    animation: slide-in 0.4s forwards;
+}
+
+#model button:hover {
+    cursor: pointer;
+    background: white var(--button-color) no-repeat center;
+    background-size: 24px;
+    outline: 8px solid var(--sul-color); ;
+}
+
 
 #model span {
     display: block;
@@ -177,5 +187,22 @@ ul li a:hover {
 
     .light {
         --bg-url: url(./assets/assets/bg-desktop-light.jpg);
+    }
+}
+
+@keyframes slide-in {
+    from {
+        left; 0;
+    }
+    to {
+        left: 50%
+    }
+}
+@keyframes slide-out {
+    from {
+        left: 50%;
+    }
+    to {
+        left: 0;
     }
 }
